# libntech

./: .clang-format  .gitignore  .travis.yml  BSDmakefile  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile.am  README.md  autogen.sh  config.post.h.in  configure.ac  create_tarball.sh
.github/workflows/: asan_unit_tests.yml  cmake_examples.yml  codeql.yml  macos_unit_tests.yml  static_check.yml  unit_tests.yml
cmake/: availability_checks.txt
docs/: Doxyfile
examples/: json_example.c  sequence_example.c
libcompat/: Makefile.am  clock_gettime.c  closefrom.c  dirfd.c  drand48.c  fchmodat.c  fchownat.c  fstatat.c  generic_at.c  generic_at.h  gmtime_r.c  inet_pton.c  localtime_r.c  log2.c  memdup.c  memmem.c  memrchr.c  mkdtemp.c  nanosleep.c  openat.c  poll.c  pthread_attr_setstacksize.c  pthread_sigmask.c  readlinkat.c  round.c  rpl_ctime.c  seteuid.c  setlinebuf.c  srand48.c  stpncpy.c  strcasecmp.c  strcasestr.c  strdup.c  strerror.c  strlcat.c  strlcpy.c  strncasecmp.c  strndup.c  strnlen.c  strrstr.c  (+4 more)
libutils/: Makefile.am  alloc.c  alloc.h  array_map.c  array_map_priv.h  bool.h  buffer.c  buffer.h  cleanup.c  cleanup.h  clockid_t.h.in  compiler.h  condition_macros.h  csv_parser.c  csv_parser.h  csv_writer.c  csv_writer.h  definitions.h  deprecated.h  dir.h  dir_priv.h  encode.c  encode.h  file_lib.c  file_lib.h  fsattrs.c  fsattrs.h  glob_lib.c  glob_lib.h.in  hash.c  hash.h  hash_map.c  hash_map_priv.h  hash_method.h  ip_address.c  ip_address.h  json-pcre.h  json-priv.h  json-utils.c  json-utils.h  (+84 more)
m4/: acinclude.m4  cf3_check_proper_func.m4  cf3_gcc_flags.m4  cf3_path_root_prog.m4  cf3_platforms.m4  cf3_with_library.m4  snprintf.m4
misc/changelog-generator/: changelog-generator
tests/: .gitignore  Makefile.am
tests/acceptance/00_basics/environment/: proc-net.cf.sub
tests/acceptance/10_files/09_insert_lines/: insert_line_end_match_eof.cf
tests/acceptance/16_cf-serverd/serial/: allowlegacyconnects_absent.srv
tests/static-check/: Makefile.am  cppcheck_suppressions.txt  run.sh  run_checks.sh
tests/unit/: Makefile.am  alloc_test.c  condition_macros_test.c  csv_writer_test.c  definitions_test.c  env_file_test.c  file_lib_test.c  file_lock_test.c  fsattrs_test.c  glob_lib_test.c  hash_test.c  ipaddress_test.c  json_test.c  logging_timestamp_test.c  map_test.c  misc_lib_test.c  proc_manager_force_terminate_test.c  proc_manager_test.c  regex_test.c  sequence_test.c  set_test.c  stack_test.c  string_lib_test.c  string_sequence_test.c  thread_test.c  threaded_queue_test.c  threaded_stack_test.c  version_comparison_test.c
tests/unit/data/: benchmark.json  sample.json
travis-scripts/: after_success.sh  before_install.sh  script.sh
